objects/PRM_Technical_Partner_Record__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <referenceTo>PRMTechnicalMergeHistory__c</referenceTo>
        <relationshipLabel>PRM Technical Partner Records</relationshipLabel>
        <relationshipName>PRM_Technical_Partner_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRMUIMS__c</fullName>
        <label>Company Federated ID (UIMS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>PRM Technical Partner Record</label>
    <nameField>
        <label>SE Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Technical Partner Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>